--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="s">#7d88d2</color>
     <color name="a">#4859c9</color>
     <color name="js">#004859c9</color>
+    <color name="off">#fe1b1c1e</color>
 </resources>
