--- a/app/src/main/res/layout/a.xml
+++ b/app/src/main/res/layout/a.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/mainLy"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/s"
+    android:background="@color/off"
     android:orientation="vertical">
 
     <LinearLayout
@@ -13,9 +14,32 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/imageButton4"
         android:orientation="vertical"
-        android:weightSum="3"
-        android:layout_below="@+id/imageButton3">
+        android:weightSum="4">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/power"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/poweroff" />
+
+            <TextView
+                android:id="@+id/powerText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="13dp"
+                android:text="Power Off"
+                android:textColor="@android:color/background_light"
+                android:textSize="30sp"
+                android:textStyle="bold|italic" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,7 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="13dp"
-                android:text="500"
+                android:text="Off"
                 android:textColor="@android:color/background_light"
                 android:textSize="30sp"
                 android:textStyle="bold|italic" />
@@ -56,8 +80,9 @@
                 android:id="@+id/TempTextF"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxLength="6"
                 android:paddingLeft="13dp"
-                android:text="000"
+                android:text="Off"
                 android:textColor="@android:color/background_light"
                 android:textSize="30sp"
                 android:textStyle="bold|italic" />
@@ -80,7 +105,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="13dp"
-                android:text="55"
+                android:text="Off"
                 android:textColor="@android:color/background_light"
                 android:textSize="30sp"
                 android:textStyle="bold|italic" />
@@ -103,29 +128,34 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/sun" />
-
-    <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageView"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/imageView"
-        android:layout_marginTop="7dp"
-        android:background="@color/js"
-        android:src="@drawable/info" />
+        android:src="@drawable/sundark" />
 
     <ImageButton
         android:id="@+id/imageButton4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/js"
-        android:src="@drawable/youtube"
+        android:layout_alignEnd="@+id/imageView"
         android:layout_alignParentTop="true"
         android:layout_alignRight="@+id/imageView"
-        android:layout_alignEnd="@+id/imageView"
+        android:layout_marginEnd="49dp"
         android:layout_marginRight="49dp"
-        android:layout_marginEnd="49dp" />
+        android:background="@color/js"
+        android:onClick="OpenYoutubeLink"
+        android:src="@drawable/youtube" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/imageView2"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/sprinkle"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/sprinkle" />
 
 </RelativeLayout>
